jamba/src/Parser2.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser2.y
-----------------------------------------------------------------------------

state 24 contains 3 reduce/reduce conflicts.

terminal let is unused
terminal then is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseJamba -> decs                          (0)
	type -> name                                       (1)
	type -> '(' ')'                                    (2)
	type -> '(' type ')'                               (3)
	type -> '[' type ']'                               (4)
	type -> type '->' type                             (5)
	typeAnnotation -> ':' type                         (6)
	argument -> '(' name optional__typeAnnotation__ ')'   (7)
	argument -> name                                   (8)
	dec -> name many__argument__ optional__typeAnnotation__ '{' exp '}'   (9)
	decs -> many__dec__                                (10)
	name -> identifier                                 (11)
	exp -> expapp                                      (12)
	exp -> expcond                                     (13)
	exp -> dec in '{' exp '}'                          (14)
	exp -> '-' exp                                     (15)
	exp -> exp '+' exp                                 (16)
	exp -> exp '-' exp                                 (17)
	exp -> exp '*' exp                                 (18)
	exp -> exp '/' exp                                 (19)
	exp -> exp '=' exp                                 (20)
	exp -> exp '!=' exp                                (21)
	exp -> exp '<' exp                                 (22)
	exp -> exp '<=' exp                                (23)
	exp -> exp '>' exp                                 (24)
	exp -> exp '>=' exp                                (25)
	exp -> exp '&' exp                                 (26)
	exp -> exp '|' exp                                 (27)
	expapp -> expapp atom                              (28)
	expapp -> atom                                     (29)
	expcond -> if exp '{' exp '}'                      (30)
	expcond -> if exp '{' exp '}' else '{' exp '}'     (31)
	atom -> integer                                    (32)
	atom -> name                                       (33)
	atom -> string                                     (34)
	atom -> '(' ')'                                    (35)
	atom -> '[' sepBy__exp__','__ ']'                  (36)
	atom -> '(' exp ')'                                (37)
	atom -> '(' '+' ')'                                (38)
	atom -> '(' '-' ')'                                (39)
	atom -> '(' '*' ')'                                (40)
	atom -> '(' '/' ')'                                (41)
	atom -> '(' '=' ')'                                (42)
	atom -> '(' '!=' ')'                               (43)
	atom -> '(' '<' ')'                                (44)
	atom -> '(' '<=' ')'                               (45)
	atom -> '(' '>' ')'                                (46)
	atom -> '(' '>=' ')'                               (47)
	atom -> '(' '&' ')'                                (48)
	atom -> '(' '|' ')'                                (49)
	many__argument__ -> many_rev__argument__           (50)
	many__dec__ -> many_rev__dec__                     (51)
	optional__typeAnnotation__ ->                      (52)
	optional__typeAnnotation__ -> typeAnnotation       (53)
	sepBy__exp__','__ -> sepBy_rev__exp__','__         (54)
	many_rev__argument__ ->                            (55)
	many_rev__argument__ -> many_rev__argument__ argument   (56)
	many_rev__dec__ ->                                 (57)
	many_rev__dec__ -> many_rev__dec__ dec             (58)
	sepBy_rev__exp__','__ ->                           (59)
	sepBy_rev__exp__','__ -> sepBy_rev__exp__','__ ',' exp   (60)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	identifier     { L.RangedToken (L.Identifier _) _ }
	string         { L.RangedToken (L.String _) _ }
	integer        { L.RangedToken (L.Integer _) _ }
	let            { L.RangedToken L.Let _ }
	in             { L.RangedToken L.In _ }
	if             { L.RangedToken L.If _ }
	then           { L.RangedToken L.Then _ }
	else           { L.RangedToken L.Else _ }
	'+'            { L.RangedToken L.Plus _ }
	'-'            { L.RangedToken L.Minus _ }
	'*'            { L.RangedToken L.Times _ }
	'/'            { L.RangedToken L.Divide _ }
	'='            { L.RangedToken L.Eq _ }
	'!='           { L.RangedToken L.Neq _ }
	'<'            { L.RangedToken L.Lt _ }
	'<='           { L.RangedToken L.Le _ }
	'>'            { L.RangedToken L.Gt _ }
	'>='           { L.RangedToken L.Ge _ }
	'&'            { L.RangedToken L.And _ }
	'|'            { L.RangedToken L.Or _ }
	'('            { L.RangedToken L.LPar _ }
	')'            { L.RangedToken L.RPar _ }
	'{'            { L.RangedToken L.LBrace _ }
	'}'            { L.RangedToken L.RBrace _ }
	'['            { L.RangedToken L.LBrack _ }
	']'            { L.RangedToken L.RBrack _ }
	','            { L.RangedToken L.Comma _ }
	':'            { L.RangedToken L.Colon _ }
	'->'           { L.RangedToken L.Arrow _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseJamba rule  0
	type            rules 1, 2, 3, 4, 5
	typeAnnotation  rule  6
	argument        rules 7, 8
	dec             rule  9
	decs            rule  10
	name            rule  11
	exp             rules 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27
	expapp          rules 28, 29
	expcond         rules 30, 31
	atom            rules 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49
	many__argument__ rule  50
	many__dec__     rule  51
	optional__typeAnnotation__ rules 52, 53
	sepBy__exp__','__ rule  54
	many_rev__argument__ rules 55, 56
	many_rev__dec__ rules 57, 58
	sepBy_rev__exp__','__ rules 59, 60

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseJamba -> . decs                         (rule 0)

	identifier     reduce using rule 57
	%eof           reduce using rule 57

	decs           goto state 4
	many__dec__    goto state 5
	many_rev__dec__goto state 6

State 1

	type -> . name                                      (rule 1)

	identifier     shift, and enter state 3

	name           goto state 2

State 2

	type -> name .                                      (rule 1)

	')'            reduce using rule 1
	'{'            reduce using rule 1
	']'            reduce using rule 1
	'->'           reduce using rule 1


State 3

	name -> identifier .                                (rule 11)

	identifier     reduce using rule 11
	string         reduce using rule 11
	integer        reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'*'            reduce using rule 11
	'/'            reduce using rule 11
	'='            reduce using rule 11
	'!='           reduce using rule 11
	'<'            reduce using rule 11
	'<='           reduce using rule 11
	'>'            reduce using rule 11
	'>='           reduce using rule 11
	'&'            reduce using rule 11
	'|'            reduce using rule 11
	'('            reduce using rule 11
	')'            reduce using rule 11
	'{'            reduce using rule 11
	'}'            reduce using rule 11
	'['            reduce using rule 11
	']'            reduce using rule 11
	','            reduce using rule 11
	':'            reduce using rule 11
	'->'           reduce using rule 11


State 4

	%start_parseJamba -> decs .                         (rule 0)

	%eof           accept


State 5

	decs -> many__dec__ .                               (rule 10)

	%eof           reduce using rule 10


State 6

	many__dec__ -> many_rev__dec__ .                    (rule 51)
	many_rev__dec__ -> many_rev__dec__ . dec            (rule 58)

	identifier     shift, and enter state 3
	%eof           reduce using rule 51

	dec            goto state 7
	name           goto state 8

State 7

	many_rev__dec__ -> many_rev__dec__ dec .            (rule 58)

	identifier     reduce using rule 58
	%eof           reduce using rule 58


State 8

	dec -> name . many__argument__ optional__typeAnnotation__ '{' exp '}'    (rule 9)

	identifier     reduce using rule 55
	'('            reduce using rule 55
	'{'            reduce using rule 55
	':'            reduce using rule 55

	many__argument__goto state 9
	many_rev__argument__goto state 10

State 9

	dec -> name many__argument__ . optional__typeAnnotation__ '{' exp '}'    (rule 9)

	'{'            reduce using rule 52
	':'            shift, and enter state 16

	typeAnnotation goto state 14
	optional__typeAnnotation__goto state 15

State 10

	many__argument__ -> many_rev__argument__ .          (rule 50)
	many_rev__argument__ -> many_rev__argument__ . argument    (rule 56)

	identifier     shift, and enter state 3
	'('            shift, and enter state 13
	'{'            reduce using rule 50
	':'            reduce using rule 50

	argument       goto state 11
	name           goto state 12

State 11

	many_rev__argument__ -> many_rev__argument__ argument .    (rule 56)

	identifier     reduce using rule 56
	'('            reduce using rule 56
	'{'            reduce using rule 56
	':'            reduce using rule 56


State 12

	argument -> name .                                  (rule 8)

	identifier     reduce using rule 8
	'('            reduce using rule 8
	'{'            reduce using rule 8
	':'            reduce using rule 8


State 13

	argument -> '(' . name optional__typeAnnotation__ ')'    (rule 7)

	identifier     shift, and enter state 3

	name           goto state 21

State 14

	optional__typeAnnotation__ -> typeAnnotation .      (rule 53)

	')'            reduce using rule 53
	'{'            reduce using rule 53


State 15

	dec -> name many__argument__ optional__typeAnnotation__ . '{' exp '}'    (rule 9)

	'{'            shift, and enter state 20


State 16

	typeAnnotation -> ':' . type                        (rule 6)

	identifier     shift, and enter state 3
	'('            shift, and enter state 18
	'['            shift, and enter state 19

	type           goto state 17
	name           goto state 2

State 17

	type -> type . '->' type                            (rule 5)
	typeAnnotation -> ':' type .                        (rule 6)

	')'            reduce using rule 6
	'{'            reduce using rule 6
	'->'           shift, and enter state 38


State 18

	type -> '(' . ')'                                   (rule 2)
	type -> '(' . type ')'                              (rule 3)

	identifier     shift, and enter state 3
	'('            shift, and enter state 18
	')'            shift, and enter state 37
	'['            shift, and enter state 19

	type           goto state 36
	name           goto state 2

State 19

	type -> '[' . type ']'                              (rule 4)

	identifier     shift, and enter state 3
	'('            shift, and enter state 18
	'['            shift, and enter state 19

	type           goto state 35
	name           goto state 2

State 20

	dec -> name many__argument__ optional__typeAnnotation__ '{' . exp '}'    (rule 9)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 25
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 21

	argument -> '(' name . optional__typeAnnotation__ ')'    (rule 7)

	')'            reduce using rule 52
	':'            shift, and enter state 16

	typeAnnotation goto state 14
	optional__typeAnnotation__goto state 22

State 22

	argument -> '(' name optional__typeAnnotation__ . ')'    (rule 7)

	')'            shift, and enter state 76


State 23

	exp -> dec . in '{' exp '}'                         (rule 14)

	in             shift, and enter state 75


State 24

	dec -> name . many__argument__ optional__typeAnnotation__ '{' exp '}'    (rule 9)
	atom -> name .                                      (rule 33)

	identifier     reduce using rule 55
			(reduce using rule 33)

	string         reduce using rule 33
	integer        reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'='            reduce using rule 33
	'!='           reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'&'            reduce using rule 33
	'|'            reduce using rule 33
	'('            reduce using rule 55
			(reduce using rule 33)

	')'            reduce using rule 33
	'{'            reduce using rule 55
			(reduce using rule 33)

	'}'            reduce using rule 33
	'['            reduce using rule 33
	']'            reduce using rule 33
	','            reduce using rule 33
	':'            reduce using rule 55

	many__argument__goto state 9
	many_rev__argument__goto state 10

State 25

	dec -> name many__argument__ optional__typeAnnotation__ '{' exp . '}'    (rule 9)
	exp -> exp . '+' exp                                (rule 16)
	exp -> exp . '-' exp                                (rule 17)
	exp -> exp . '*' exp                                (rule 18)
	exp -> exp . '/' exp                                (rule 19)
	exp -> exp . '=' exp                                (rule 20)
	exp -> exp . '!=' exp                               (rule 21)
	exp -> exp . '<' exp                                (rule 22)
	exp -> exp . '<=' exp                               (rule 23)
	exp -> exp . '>' exp                                (rule 24)
	exp -> exp . '>=' exp                               (rule 25)
	exp -> exp . '&' exp                                (rule 26)
	exp -> exp . '|' exp                                (rule 27)

	'+'            shift, and enter state 62
	'-'            shift, and enter state 63
	'*'            shift, and enter state 64
	'/'            shift, and enter state 65
	'='            shift, and enter state 66
	'!='           shift, and enter state 67
	'<'            shift, and enter state 68
	'<='           shift, and enter state 69
	'>'            shift, and enter state 70
	'>='           shift, and enter state 71
	'&'            shift, and enter state 72
	'|'            shift, and enter state 73
	'}'            shift, and enter state 74


State 26

	exp -> expapp .                                     (rule 12)
	expapp -> expapp . atom                             (rule 28)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'*'            reduce using rule 12
	'/'            reduce using rule 12
	'='            reduce using rule 12
	'!='           reduce using rule 12
	'<'            reduce using rule 12
	'<='           reduce using rule 12
	'>'            reduce using rule 12
	'>='           reduce using rule 12
	'&'            reduce using rule 12
	'|'            reduce using rule 12
	'('            shift, and enter state 33
	')'            reduce using rule 12
	'{'            reduce using rule 12
	'}'            reduce using rule 12
	'['            shift, and enter state 34
	']'            reduce using rule 12
	','            reduce using rule 12

	name           goto state 60
	atom           goto state 61

State 27

	exp -> expcond .                                    (rule 13)

	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'*'            reduce using rule 13
	'/'            reduce using rule 13
	'='            reduce using rule 13
	'!='           reduce using rule 13
	'<'            reduce using rule 13
	'<='           reduce using rule 13
	'>'            reduce using rule 13
	'>='           reduce using rule 13
	'&'            reduce using rule 13
	'|'            reduce using rule 13
	')'            reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	']'            reduce using rule 13
	','            reduce using rule 13


State 28

	expapp -> atom .                                    (rule 29)

	identifier     reduce using rule 29
	string         reduce using rule 29
	integer        reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'='            reduce using rule 29
	'!='           reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	'&'            reduce using rule 29
	'|'            reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'{'            reduce using rule 29
	'}'            reduce using rule 29
	'['            reduce using rule 29
	']'            reduce using rule 29
	','            reduce using rule 29


State 29

	atom -> string .                                    (rule 34)

	identifier     reduce using rule 34
	string         reduce using rule 34
	integer        reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'='            reduce using rule 34
	'!='           reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'&'            reduce using rule 34
	'|'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'{'            reduce using rule 34
	'}'            reduce using rule 34
	'['            reduce using rule 34
	']'            reduce using rule 34
	','            reduce using rule 34


State 30

	atom -> integer .                                   (rule 32)

	identifier     reduce using rule 32
	string         reduce using rule 32
	integer        reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'*'            reduce using rule 32
	'/'            reduce using rule 32
	'='            reduce using rule 32
	'!='           reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'&'            reduce using rule 32
	'|'            reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	'['            reduce using rule 32
	']'            reduce using rule 32
	','            reduce using rule 32


State 31

	expcond -> if . exp '{' exp '}'                     (rule 30)
	expcond -> if . exp '{' exp '}' else '{' exp '}'    (rule 31)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 59
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 32

	exp -> '-' . exp                                    (rule 15)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 58
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 33

	atom -> '(' . ')'                                   (rule 35)
	atom -> '(' . exp ')'                               (rule 37)
	atom -> '(' . '+' ')'                               (rule 38)
	atom -> '(' . '-' ')'                               (rule 39)
	atom -> '(' . '*' ')'                               (rule 40)
	atom -> '(' . '/' ')'                               (rule 41)
	atom -> '(' . '=' ')'                               (rule 42)
	atom -> '(' . '!=' ')'                              (rule 43)
	atom -> '(' . '<' ')'                               (rule 44)
	atom -> '(' . '<=' ')'                              (rule 45)
	atom -> '(' . '>' ')'                               (rule 46)
	atom -> '(' . '>=' ')'                              (rule 47)
	atom -> '(' . '&' ')'                               (rule 48)
	atom -> '(' . '|' ')'                               (rule 49)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'+'            shift, and enter state 45
	'-'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48
	'='            shift, and enter state 49
	'!='           shift, and enter state 50
	'<'            shift, and enter state 51
	'<='           shift, and enter state 52
	'>'            shift, and enter state 53
	'>='           shift, and enter state 54
	'&'            shift, and enter state 55
	'|'            shift, and enter state 56
	'('            shift, and enter state 33
	')'            shift, and enter state 57
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 44
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 34

	atom -> '[' . sepBy__exp__','__ ']'                 (rule 36)

	']'            reduce using rule 59
	','            reduce using rule 59

	sepBy__exp__','__goto state 42
	sepBy_rev__exp__','__goto state 43

State 35

	type -> '[' type . ']'                              (rule 4)
	type -> type . '->' type                            (rule 5)

	']'            shift, and enter state 41
	'->'           shift, and enter state 38


State 36

	type -> '(' type . ')'                              (rule 3)
	type -> type . '->' type                            (rule 5)

	')'            shift, and enter state 40
	'->'           shift, and enter state 38


State 37

	type -> '(' ')' .                                   (rule 2)

	')'            reduce using rule 2
	'{'            reduce using rule 2
	']'            reduce using rule 2
	'->'           reduce using rule 2


State 38

	type -> type '->' . type                            (rule 5)

	identifier     shift, and enter state 3
	'('            shift, and enter state 18
	'['            shift, and enter state 19

	type           goto state 39
	name           goto state 2

State 39

	type -> type . '->' type                            (rule 5)
	type -> type '->' type .                            (rule 5)

	')'            reduce using rule 5
	'{'            reduce using rule 5
	']'            reduce using rule 5
	'->'           shift, and enter state 38


State 40

	type -> '(' type ')' .                              (rule 3)

	')'            reduce using rule 3
	'{'            reduce using rule 3
	']'            reduce using rule 3
	'->'           reduce using rule 3


State 41

	type -> '[' type ']' .                              (rule 4)

	')'            reduce using rule 4
	'{'            reduce using rule 4
	']'            reduce using rule 4
	'->'           reduce using rule 4


State 42

	atom -> '[' sepBy__exp__','__ . ']'                 (rule 36)

	']'            shift, and enter state 105


State 43

	sepBy__exp__','__ -> sepBy_rev__exp__','__ .        (rule 54)
	sepBy_rev__exp__','__ -> sepBy_rev__exp__','__ . ',' exp    (rule 60)

	']'            reduce using rule 54
	','            shift, and enter state 104


State 44

	exp -> exp . '+' exp                                (rule 16)
	exp -> exp . '-' exp                                (rule 17)
	exp -> exp . '*' exp                                (rule 18)
	exp -> exp . '/' exp                                (rule 19)
	exp -> exp . '=' exp                                (rule 20)
	exp -> exp . '!=' exp                               (rule 21)
	exp -> exp . '<' exp                                (rule 22)
	exp -> exp . '<=' exp                               (rule 23)
	exp -> exp . '>' exp                                (rule 24)
	exp -> exp . '>=' exp                               (rule 25)
	exp -> exp . '&' exp                                (rule 26)
	exp -> exp . '|' exp                                (rule 27)
	atom -> '(' exp . ')'                               (rule 37)

	'+'            shift, and enter state 62
	'-'            shift, and enter state 63
	'*'            shift, and enter state 64
	'/'            shift, and enter state 65
	'='            shift, and enter state 66
	'!='           shift, and enter state 67
	'<'            shift, and enter state 68
	'<='           shift, and enter state 69
	'>'            shift, and enter state 70
	'>='           shift, and enter state 71
	'&'            shift, and enter state 72
	'|'            shift, and enter state 73
	')'            shift, and enter state 103


State 45

	atom -> '(' '+' . ')'                               (rule 38)

	')'            shift, and enter state 102


State 46

	exp -> '-' . exp                                    (rule 15)
	atom -> '(' '-' . ')'                               (rule 39)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	')'            shift, and enter state 101
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 58
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 47

	atom -> '(' '*' . ')'                               (rule 40)

	')'            shift, and enter state 100


State 48

	atom -> '(' '/' . ')'                               (rule 41)

	')'            shift, and enter state 99


State 49

	atom -> '(' '=' . ')'                               (rule 42)

	')'            shift, and enter state 98


State 50

	atom -> '(' '!=' . ')'                              (rule 43)

	')'            shift, and enter state 97


State 51

	atom -> '(' '<' . ')'                               (rule 44)

	')'            shift, and enter state 96


State 52

	atom -> '(' '<=' . ')'                              (rule 45)

	')'            shift, and enter state 95


State 53

	atom -> '(' '>' . ')'                               (rule 46)

	')'            shift, and enter state 94


State 54

	atom -> '(' '>=' . ')'                              (rule 47)

	')'            shift, and enter state 93


State 55

	atom -> '(' '&' . ')'                               (rule 48)

	')'            shift, and enter state 92


State 56

	atom -> '(' '|' . ')'                               (rule 49)

	')'            shift, and enter state 91


State 57

	atom -> '(' ')' .                                   (rule 35)

	identifier     reduce using rule 35
	string         reduce using rule 35
	integer        reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'='            reduce using rule 35
	'!='           reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'&'            reduce using rule 35
	'|'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'{'            reduce using rule 35
	'}'            reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	','            reduce using rule 35


State 58

	exp -> '-' exp .                                    (rule 15)
	exp -> exp . '+' exp                                (rule 16)
	exp -> exp . '-' exp                                (rule 17)
	exp -> exp . '*' exp                                (rule 18)
	exp -> exp . '/' exp                                (rule 19)
	exp -> exp . '=' exp                                (rule 20)
	exp -> exp . '!=' exp                               (rule 21)
	exp -> exp . '<' exp                                (rule 22)
	exp -> exp . '<=' exp                               (rule 23)
	exp -> exp . '>' exp                                (rule 24)
	exp -> exp . '>=' exp                               (rule 25)
	exp -> exp . '&' exp                                (rule 26)
	exp -> exp . '|' exp                                (rule 27)

	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'*'            shift, and enter state 64
	'/'            shift, and enter state 65
	'='            reduce using rule 15
	'!='           reduce using rule 15
	'<'            reduce using rule 15
	'<='           reduce using rule 15
	'>'            reduce using rule 15
	'>='           reduce using rule 15
	'&'            reduce using rule 15
	'|'            reduce using rule 15
	')'            reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	']'            reduce using rule 15
	','            reduce using rule 15


State 59

	exp -> exp . '+' exp                                (rule 16)
	exp -> exp . '-' exp                                (rule 17)
	exp -> exp . '*' exp                                (rule 18)
	exp -> exp . '/' exp                                (rule 19)
	exp -> exp . '=' exp                                (rule 20)
	exp -> exp . '!=' exp                               (rule 21)
	exp -> exp . '<' exp                                (rule 22)
	exp -> exp . '<=' exp                               (rule 23)
	exp -> exp . '>' exp                                (rule 24)
	exp -> exp . '>=' exp                               (rule 25)
	exp -> exp . '&' exp                                (rule 26)
	exp -> exp . '|' exp                                (rule 27)
	expcond -> if exp . '{' exp '}'                     (rule 30)
	expcond -> if exp . '{' exp '}' else '{' exp '}'    (rule 31)

	'+'            shift, and enter state 62
	'-'            shift, and enter state 63
	'*'            shift, and enter state 64
	'/'            shift, and enter state 65
	'='            shift, and enter state 66
	'!='           shift, and enter state 67
	'<'            shift, and enter state 68
	'<='           shift, and enter state 69
	'>'            shift, and enter state 70
	'>='           shift, and enter state 71
	'&'            shift, and enter state 72
	'|'            shift, and enter state 73
	'{'            shift, and enter state 90


State 60

	atom -> name .                                      (rule 33)

	identifier     reduce using rule 33
	string         reduce using rule 33
	integer        reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'='            reduce using rule 33
	'!='           reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'&'            reduce using rule 33
	'|'            reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'{'            reduce using rule 33
	'}'            reduce using rule 33
	'['            reduce using rule 33
	']'            reduce using rule 33
	','            reduce using rule 33


State 61

	expapp -> expapp atom .                             (rule 28)

	identifier     reduce using rule 28
	string         reduce using rule 28
	integer        reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'='            reduce using rule 28
	'!='           reduce using rule 28
	'<'            reduce using rule 28
	'<='           reduce using rule 28
	'>'            reduce using rule 28
	'>='           reduce using rule 28
	'&'            reduce using rule 28
	'|'            reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'{'            reduce using rule 28
	'}'            reduce using rule 28
	'['            reduce using rule 28
	']'            reduce using rule 28
	','            reduce using rule 28


State 62

	exp -> exp '+' . exp                                (rule 16)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 89
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 63

	exp -> exp '-' . exp                                (rule 17)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 88
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 64

	exp -> exp '*' . exp                                (rule 18)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 87
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 65

	exp -> exp '/' . exp                                (rule 19)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 86
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 66

	exp -> exp '=' . exp                                (rule 20)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 85
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 67

	exp -> exp '!=' . exp                               (rule 21)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 84
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 68

	exp -> exp '<' . exp                                (rule 22)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 83
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 69

	exp -> exp '<=' . exp                               (rule 23)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 82
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 70

	exp -> exp '>' . exp                                (rule 24)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 81
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 71

	exp -> exp '>=' . exp                               (rule 25)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 80
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 72

	exp -> exp '&' . exp                                (rule 26)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 79
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 73

	exp -> exp '|' . exp                                (rule 27)

	identifier     shift, and enter state 3
	string         shift, and enter state 29
	integer        shift, and enter state 30
	if             shift, and enter state 31
	'-'            shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34

	dec            goto state 23
	name           goto state 24
	exp            goto state 78
	expapp         goto state 26
	expcond        goto state 27
	atom           goto state 28

State 74

	dec -> name many__argument__ optional__typeAnnotation__ '{' exp '}' .    (rule 9)

	identifier     reduce using rule 9
	in             reduce using rule 9
	%eof           reduce using rule 9


State 75

	exp -> dec in . '{' exp '}'                         (rule 14)
